further setup improvements: - provide smb.conf with shares. - derive missing network values. - added opsi ssh link handling. - added devices.csv entry creation for firewall and opsi server. - setup dialog in english. - improved error handling and script output. - improved subprocess handling. - improved password handling.

--- a/share/setupdefaults.ini
+++ b/share/setupdefaults.ini
@@ -1,27 +1,32 @@
 # setupdefaults.ini
 #
 # thomas@linuxmuster.net
-# 20170130
+# 20170210
+#
+# Don't change this file!
 #
 
-[defaults]
+[setup]
 servername = server
 domainname = linuxmuster.local
-basedn = dc=linuxmuster,dc=local
+basedn =
+REALM =
+NETBIOSNAME =
 serverip = 10.0.0.1
-network = 10.0.0.0
+network =
 opsiip =
 mailip =
-firewallip = 10.0.0.254
-gatewayip = 10.0.0.254
+firewallip =
+gatewayip =
+dnsforwarder =
 netmask = 255.255.0.0
-broadcast = 10.0.255.255
-dhcprange = 10.0.0.100 10.0.0.200
+broadcast =
+dhcprange =
 smtprelay =
-iface = eth0
-adminpw = Muster!
-firewallpw = Muster!
-mailpw = Muster!
+iface =
+adminpw =
+firewallpw =
+mailpw =
 sambadomain = SCHULE
 schoolname = Linuxmusterschule
 location = Linuxmusterstadt
