--- a/share/templates/dhcpd.conf
+++ b/share/templates/dhcpd.conf
@@ -3,7 +3,7 @@
 # Sample configuration file for ISC dhcpd for Debian
 #
 # thomas@linuxmuster.net
-# 20160913
+# 20170210
 #
 
 # The ddns-updates-style parameter controls whether or not the server will
@@ -52,8 +52,9 @@ if option arch = 00:06 {
 
 next-server @@serverip@@;
 
-# default servernet definition
+# subnets definitions
 include "/etc/dhcp/servernet.conf";
+include "/etc/dhcp/subnets.conf";
 
 group {
 
@@ -61,7 +62,7 @@ group {
  default-lease-time 172800;
  max-lease-time 172800;
 
- # dynamically created stuff by linuxmuster-devices is included
+ # dynamically created stuff by linuxmuster-import-devices is included
  include "/etc/dhcp/devices.conf";
 
  # put your custom stuff in this included file
