--- a/share/templates/dhcpd.subnets.conf
+++ b/share/templates/dhcpd.subnets.conf
@@ -1,4 +1,4 @@
-# /etc/dhcp/devices.conf
+# /etc/dhcp/subnets.conf
 #
 # configfile dummy, valid file will be created by linuxmuster-import-devices
 #
