* functions.py, subProc: fixed returncodes. * linuxmuster-setup.py:   - fixed logging of stderr.   - optimized ini file handling.   - removed deprecated lmn62 share definitions from smb.conf.   - fixed opsi password query.

--- a/share/templates/smb.conf
+++ b/share/templates/smb.conf
@@ -1,13 +1,13 @@
 # /etc/samba/smb.conf.setup
 #
 # thomas@linuxmuster.net
-# 20170106
+# 20170324
 #
 
 [global]
 workgroup = @@sambadomain@@
-realm = @@REALM@@
-netbios name = @@NETBIOSNAME@@
+realm = @@realm@@
+netbios name = @@netbiosname@@
 server role = active directory domain controller
 dns forwarder = @@dnsforwarder@@
 
@@ -21,7 +21,7 @@ read only = No
 
 [homes]
 browseable = no
-admin users = Administrator,global-admin
+admin users = Administrator,@"Domain Admins"
 writable = yes
 path = %H
 valid users = %S
