--- a/share/setupdefaults.ini
+++ b/share/setupdefaults.ini
@@ -1,7 +1,7 @@
 # setupdefaults.ini
 #
 # thomas@linuxmuster.net
-# 20170210
+# 20170324
 #
 # Don't change this file!
 #
@@ -10,8 +10,8 @@
 servername = server
 domainname = linuxmuster.local
 basedn =
-REALM =
-NETBIOSNAME =
+realm =
+netbiosname =
 serverip = 10.0.0.1
 network =
 opsiip =
