linuxmuster-setup.py:   - compute sambadomain from first part of domainname.   - added option to skip firewall setup.   - fixed missing old smb.conf deletion.

--- a/share/setupdefaults.ini
+++ b/share/setupdefaults.ini
@@ -1,7 +1,7 @@
 # setupdefaults.ini
 #
 # thomas@linuxmuster.net
-# 20170324
+# 20170326
 #
 # Don't change this file!
 #
@@ -27,8 +27,9 @@ iface =
 adminpw =
 firewallpw =
 mailpw =
-sambadomain = SCHULE
+sambadomain =
 schoolname = Linuxmusterschule
 location = Linuxmusterstadt
 country = DE
 state = BW
+skipfw = no
