linuxmuster-setup.py: - set all administrative passwords to noexpiry. - set default domain to linuxmuster.lan. - added notification to setup dialog that the first part of the internet domain name is used   as samba domain name. - set configparser's inline_comment_prefixes to '#' & ';'. - fixed realm in setup dialog.

--- a/share/setupdefaults.ini
+++ b/share/setupdefaults.ini
@@ -1,14 +1,14 @@
 # setupdefaults.ini
 #
 # thomas@linuxmuster.net
-# 20170326
+# 20170426
 #
 # Don't change this file!
 #
 
 [setup]
 servername = server
-domainname = linuxmuster.local
+domainname = linuxmuster.lan
 basedn =
 realm =
 netbiosname =
