* setup improvements:   - reworked ssl certificate creation.   - configured certificates for various services.   - netonly mode to configure the network initially.   - improved ssh link handling.   - added firewall setup.   - optimized sequence. * added script to create test users.

--- a/share/setupdefaults.ini
+++ b/share/setupdefaults.ini
@@ -1,7 +1,7 @@
 # setupdefaults.ini
 #
 # thomas@linuxmuster.net
-# 20170426
+# 20170814
 #
 # Don't change this file!
 #
@@ -20,16 +20,19 @@ firewallip =
 gatewayip =
 dnsforwarder =
 netmask = 255.255.0.0
+bitmask = 16
 broadcast =
 dhcprange =
 smtprelay =
 iface =
 adminpw =
 firewallpw =
+opsipw =
 mailpw =
 sambadomain =
 schoolname = Linuxmusterschule
 location = Linuxmusterstadt
 country = DE
 state = BW
-skipfw = no
+skipfw = False
+netonly = False
