--- a/share/setupdefaults.ini
+++ b/share/setupdefaults.ini
@@ -1,7 +1,7 @@
 # setupdefaults.ini
 #
 # thomas@linuxmuster.net
-# 20170814
+# 20171117
 #
 # Don't change this file!
 #
@@ -15,20 +15,22 @@ netbiosname =
 serverip = 10.0.0.1
 network =
 opsiip =
-mailip =
+dockerip =
 firewallip =
-gatewayip =
+mailip =
 dnsforwarder =
 netmask = 255.255.0.0
 bitmask = 16
 broadcast =
 dhcprange =
 smtprelay =
+smtpuser =
+smtppw =
 iface =
 adminpw =
 firewallpw =
 opsipw =
-mailpw =
+dockerpw =
 sambadomain =
 schoolname = Linuxmusterschule
 location = Linuxmusterstadt
