--- a/share/templates/dhcpd.servernet.conf
+++ b/share/templates/dhcpd.servernet.conf
@@ -5,7 +5,7 @@
 #
 # server subnet definition
 subnet @@network@@ netmask @@netmask@@ {
-    option routers @@gatewayip@@;
+    option routers @@firewallip@@;
     option broadcast-address @@broadcast@@;
     range @@dhcprange@@;
     max-lease-time 3600;
