- setup:   - added sophomorix samba backup.   - removed dnsforwarder variable, use firewallip instead.   - added ssl cert & key rollout for docker and opsi appliances.   - fixed deprecated variables.   - improved ssh key deployment.

--- a/share/templates/smb.conf
+++ b/share/templates/smb.conf
@@ -1,7 +1,7 @@
 # /etc/samba/smb.conf.setup
 #
 # thomas@linuxmuster.net
-# 20170324
+# 20180209
 #
 
 [global]
@@ -9,7 +9,7 @@ workgroup = @@sambadomain@@
 realm = @@realm@@
 netbios name = @@netbiosname@@
 server role = active directory domain controller
-dns forwarder = @@dnsforwarder@@
+dns forwarder = @@firewallip@@
 
 [netlogon]
 path = /var/lib/samba/sysvol/linuxmuster.local/scripts
