- setup:   - fix syntax error in ssh function.   - added opsi support.   - updated default ssl certificate data. - linuxmuster-import-devices.py: fixed reading non utf-8 textfiles.

--- a/share/setupdefaults.ini
+++ b/share/setupdefaults.ini
@@ -1,7 +1,7 @@
 # setupdefaults.ini
 #
 # thomas@linuxmuster.net
-# 20180209
+# 20180215
 #
 # Don't change this file!
 #
@@ -28,8 +28,8 @@ smtppw =
 iface =
 adminpw =
 sambadomain =
-schoolname = Linuxmusterschule
-location = Linuxmusterstadt
+schoolname = linuxmuster.net
+location = Schönau
 country = DE
 state = BW
 skipfw = False
