- setup consolidation:   - removed redundand items which are already served by linuxmuster-prepare.py.   - merging prepare.ini and setup.ini at the beginning.   - disable unwanted services. - sophomorix-admin password fix. - improved password input.

--- a/share/setupdefaults.ini
+++ b/share/setupdefaults.ini
@@ -1,34 +1,21 @@
 # setupdefaults.ini
 #
 # thomas@linuxmuster.net
-# 20180215
+# 20180418
 #
 # Don't change this file!
 #
 
 [setup]
-servername = server
-domainname = linuxmuster.lan
-basedn =
-realm =
-netbiosname =
-serverip = 10.0.0.1
-network =
 opsiip =
 dockerip =
-firewallip =
 mailip =
-netmask = 255.255.0.0
-bitmask = 16
-broadcast =
 dhcprange =
 smtprelay =
 smtpuser =
 smtppw =
-iface =
 adminpw =
-sambadomain =
-schoolname = linuxmuster.net
+schoolname = Linuxmuster
 location = Schönau
 country = DE
 state = BW
