- added command line parameters for all setup values. - added servername and domainname to setup again.

--- a/share/setupdefaults.ini
+++ b/share/setupdefaults.ini
@@ -1,12 +1,14 @@
 # setupdefaults.ini
 #
 # thomas@linuxmuster.net
-# 20180418
+# 20180428
 #
 # Don't change this file!
 #
 
 [setup]
+servername = server
+domainname = linuxmuster.lan
 opsiip =
 dockerip =
 mailip =
@@ -14,7 +16,7 @@ dhcprange =
 smtprelay =
 smtpuser =
 smtppw =
-adminpw =
+adminpw = Muster!
 schoolname = Linuxmuster
 location = Schönau
 country = DE
