- Added subnetting feature. - Prepared firewall api access.

--- a/share/templates/dhcpd.conf
+++ b/share/templates/dhcpd.conf
@@ -3,7 +3,7 @@
 # Sample configuration file for ISC dhcpd for Debian
 #
 # thomas@linuxmuster.net
-# 20170210
+# 20180514
 #
 
 # The ddns-updates-style parameter controls whether or not the server will
@@ -52,8 +52,7 @@ if option arch = 00:06 {
 
 next-server @@serverip@@;
 
-# subnets definitions
-include "/etc/dhcp/servernet.conf";
+# subnet definitions
 include "/etc/dhcp/subnets.conf";
 
 group {
