- added smb user share definitions. - improved setup sequence. - improved test users creation script. - device import improvements. - added school.conf template for default school with webui options commented out.

--- a/share/templates/smb.conf
+++ b/share/templates/smb.conf
@@ -1,7 +1,7 @@
 # /etc/samba/smb.conf.setup
 #
 # thomas@linuxmuster.net
-# 20180209
+# 20180626
 #
 
 [global]
@@ -10,89 +10,23 @@ realm = @@realm@@
 netbios name = @@netbiosname@@
 server role = active directory domain controller
 dns forwarder = @@firewallip@@
+idmap_ldb:use rfc2307 = yes
+idmap config * : range = 10000-99999
+registry shares = yes
+host msdfs = yes
+tls enabled = yes
+tls keyfile = /etc/linuxmuster/ssl/server.key.pem
+tls certfile = /etc/linuxmuster/ssl/server.cert.pem
+tls cafile = /etc/linuxmuster/ssl/cacert.pem
+tls verify peer = ca_and_name
+ldap server require strong auth = no
 
 [netlogon]
-path = /var/lib/samba/sysvol/linuxmuster.local/scripts
+path = /var/lib/samba/sysvol/@@domainnname@@/scripts
 read only = No
+acl allow execute always = yes
 
 [sysvol]
 path = /var/lib/samba/sysvol
 read only = No
-
-[homes]
-browseable = no
-admin users = Administrator,@"Domain Admins"
-writable = yes
-path = %H
-valid users = %S
-#root preexec = samba-userlog --log=in --username=%U --hostname=%I --homedir=%H
-#root postexec = samba-userlog --log=out --username=%U --hostname=%I --homedir=%H
-veto files = /.locked/.htaccess/
-delete veto files = no
-hide files = /$RECYCLE.BIN/desktop.ini/
-
-#[printers]
-#   comment = All Printers
-#   browseable = no
-#   path = /tmp
-#   printable = yes
-#   public = no
-#   writable = no
-#   create mode = 0700
-
-# Windows clients look for this share name as a source of downloadable
-# printer drivers
-#[print$]
-#   comment = Printer Drivers
-#   path = /var/lib/samba/printers
-#   browseable = yes
-#   read only = yes
-#   guest ok = no
-#   force group = printoperators
-#   create mask = 664
-#   directory mode = 775
-# Uncomment to allow remote administration of Windows print drivers.
-# Replace 'ntadmin' with the name of the group your admin users are
-# members of.
-#   write list = @ntadmin
-
-[pgm]
-path = /home/samba/progs
-writable = no
-write list = @"Domain Admins"
-force group = "Domain Admins"
-force create mode = 664
-force directory mode = 775
-guest ok = Yes
-
-[cdrom]
-comment = CDs
-path = /home/samba/cds
-force group = "Domain Admins"
-force create mode = 664
-force directory mode = 775
-write list = @"Domain Admins"
-writable = no
-guest ok = Yes
-
-[linbo-repo]
-comment = LINBO Images
-path = /var/linbo
-wide links = yes
-write list = @"Domain Admins"
-valid users = @"Domain Admins",nobody
-admin users = @"Domain Admins"
-writable = no
-guest ok = yes
-
-[shares]
-comment = Share files
-admin users = administrator
-path = /home/share
-inherit acls = Yes
-hide unreadable = Yes
-writeable = Yes
-guest ok = No
-hide files = /classes/desktop.ini/exams/projects/school/subclasses/teachers/
-force create mode = 2644
-force directory mode = 2755
+acl allow execute always = yes
