- fix sysvol path in smb.conf template. - fix logon script permissions.

--- a/share/templates/smb.conf
+++ b/share/templates/smb.conf
@@ -1,7 +1,7 @@
 # /etc/samba/smb.conf.setup
 #
 # thomas@linuxmuster.net
-# 20180626
+# 20180629
 #
 
 [global]
@@ -22,7 +22,7 @@ tls verify peer = ca_and_name
 ldap server require strong auth = no
 
 [netlogon]
-path = /var/lib/samba/sysvol/@@domainnname@@/scripts
+path = /var/lib/samba/sysvol/@@domainname@@/scripts
 read only = No
 acl allow execute always = yes
 
