smb.conf certname fix (#28).

--- a/share/templates/smb.conf
+++ b/share/templates/smb.conf
@@ -1,7 +1,7 @@
 # /etc/samba/smb.conf.setup
 #
 # thomas@linuxmuster.net
-# 20180629
+# 20180703
 #
 
 [global]
@@ -15,8 +15,8 @@ idmap config * : range = 10000-99999
 registry shares = yes
 host msdfs = yes
 tls enabled = yes
-tls keyfile = /etc/linuxmuster/ssl/server.key.pem
-tls certfile = /etc/linuxmuster/ssl/server.cert.pem
+tls keyfile = /etc/linuxmuster/ssl/@@servername@@.key.pem
+tls certfile = /etc/linuxmuster/ssl/@@servername@@.cert.pem
 tls cafile = /etc/linuxmuster/ssl/cacert.pem
 tls verify peer = ca_and_name
 ldap server require strong auth = no
