- remove share implementation (#29). - include smb.conf.admin for custom admin stuff. - fix sambadomain and netbiosname in setup dialog.

--- a/share/templates/smb.conf
+++ b/share/templates/smb.conf
@@ -1,7 +1,7 @@
 # /etc/samba/smb.conf.setup
 #
 # thomas@linuxmuster.net
-# 20180703
+# 20180713
 #
 
 [global]
@@ -29,4 +29,16 @@ acl allow execute always = yes
 [sysvol]
 path = /var/lib/samba/sysvol
 read only = No
-acl allow execute always = yes
+
+[printers]
+browseable = No
+path = /var/tmp
+printable = Yes
+read only = No
+
+[print$]
+path = /var/lib/samba/printers
+read only = No
+
+# including custom admin stuff
+include = /etc/samba/smb.conf.admin
