set ldap server require strong auth = no in smb.conf template.

--- a/share/templates/smb.conf
+++ b/share/templates/smb.conf
@@ -1,7 +1,7 @@
 # /etc/samba/smb.conf.setup
 #
 # thomas@linuxmuster.net
-# 20190314
+# 20190323
 #
 
 [global]
@@ -17,7 +17,7 @@ tls keyfile = /etc/linuxmuster/ssl/@@servername@@.key.pem
 tls certfile = /etc/linuxmuster/ssl/@@servername@@.cert.pem
 tls cafile = /etc/linuxmuster/ssl/cacert.pem
 tls verify peer = ca_and_name
-ldap server require strong auth = yes
+ldap server require strong auth = no
 
 [netlogon]
 path = /var/lib/samba/sysvol/@@domainname@@/scripts
