Fix #65: smbclient fails during setup without internet connection.

--- a/share/templates/smb.conf
+++ b/share/templates/smb.conf
@@ -1,7 +1,7 @@
 # /etc/samba/smb.conf.setup
 #
 # thomas@linuxmuster.net
-# 20190323
+# 20190408
 #
 
 [global]
@@ -9,7 +9,7 @@ workgroup = @@sambadomain@@
 realm = @@realm@@
 netbios name = @@netbiosname@@
 server role = active directory domain controller
-dns forwarder = @@firewallip@@
+dns forwarder =
 registry shares = yes
 host msdfs = yes
 tls enabled = yes
