added cups entries in smb.conf template.

--- a/share/templates/smb.conf
+++ b/share/templates/smb.conf
@@ -1,7 +1,7 @@
 # /etc/samba/smb.conf.setup
 #
 # thomas@linuxmuster.net
-# 20190408
+# 20190705
 #
 
 [global]
@@ -18,6 +18,8 @@ tls certfile = /etc/linuxmuster/ssl/@@servername@@.cert.pem
 tls cafile = /etc/linuxmuster/ssl/cacert.pem
 tls verify peer = ca_and_name
 ldap server require strong auth = no
+printing = cups
+printcap name = cups
 
 [netlogon]
 path = /var/lib/samba/sysvol/@@domainname@@/scripts
@@ -30,7 +32,7 @@ read only = No
 
 [printers]
 browseable = No
-path = /var/tmp
+path = /var/spool/samba
 printable = Yes
 read only = No
 
