- Fix #78: enable time server services. - add linuxmuster-modini python script for easy ini file manipulation.

--- a/share/templates/dhcpd.conf
+++ b/share/templates/dhcpd.conf
@@ -3,7 +3,7 @@
 # Sample configuration file for ISC dhcpd for Debian
 #
 # thomas@linuxmuster.net
-# 20180514
+# 20191204
 #
 
 # The ddns-updates-style parameter controls whether or not the server will
@@ -19,9 +19,9 @@ server-name "@@servername@@.@@domainname@@";
 option domain-name "@@domainname@@";
 option domain-name-servers @@serverip@@;
 option netbios-name-servers @@serverip@@;
-option ntp-servers @@firewallip@@;
+option ntp-servers @@serverip@@;
 option font-servers @@serverip@@;
-use-host-decl-names on; #rembo
+use-host-decl-names on;
 
 default-lease-time 600;
 max-lease-time 7200;
