--- a/share/templates/ntp.conf
+++ b/share/templates/ntp.conf
@@ -1,7 +1,7 @@
 # /etc/ntp.conf
 #
 # thomas@linuxmuster.net
-# 20170813
+# 20191204
 #
 # configuration for ntpd; see ntp.conf(5) for help
 
@@ -18,7 +18,7 @@ filegen clockstats file clockstats type day enable
 # Specify one or more NTP servers.
 
 # use firewall as primary ntp server
-pool firewall
+pool @@firewallip@@
 
 # Use servers from the NTP Pool Project. Approved by Ubuntu Technical Board
 # on 2011-02-08 (LP: #104525). See http://www.pool.ntp.org/join.html for
