--- a/share/templates/smb.conf
+++ b/share/templates/smb.conf
@@ -1,7 +1,7 @@
 # /etc/samba/smb.conf.setup
 #
 # thomas@linuxmuster.net
-# 20190705
+# 20191116
 #
 
 [global]
@@ -20,6 +20,7 @@ tls verify peer = ca_and_name
 ldap server require strong auth = no
 printing = cups
 printcap name = cups
+time server = yes
 
 [netlogon]
 path = /var/lib/samba/sysvol/@@domainname@@/scripts
