--- a/debian/rules
+++ b/debian/rules
@@ -89,7 +89,7 @@ binary-indep: build install
 #	dh_installmime -i
 	dh_installinit -i --no-start
 	dh_installcron -i
-	dh_installman -i debian/devices.csv.de.5
+	dh_installman -i debian/devices.csv.5
 #	dh_installinfo -i
 #	dh_undocumented -i
 	dh_installchangelogs
