- Fix #30: manage devices without fixed ip on import. - several setup improvements.

--- a/share/templates/dhcpd.conf
+++ b/share/templates/dhcpd.conf
@@ -3,7 +3,7 @@
 # Sample configuration file for ISC dhcpd for Debian
 #
 # thomas@linuxmuster.net
-# 20191204
+# 20200414
 #
 
 # The ddns-updates-style parameter controls whether or not the server will
@@ -54,6 +54,9 @@ next-server @@serverip@@;
 
 # subnet definitions
 include "/etc/dhcp/subnets.conf";
+
+# dhcp events
+include "/etc/dhcp/events.conf";
 
 group {
 
