performance improvements for dhcp events hooks.

--- a/share/templates/dhcpd.events.conf
+++ b/share/templates/dhcpd.events.conf
@@ -1,18 +1,20 @@
 # /etc/dhcp/events.conf
 #
 # thomas@linuxmuster.net
-# 20200415
+# 20200418
 #
 
-on commit {
-  set clip = binary-to-ascii(10, 8, ".", leased-address);
-  execute("/usr/lib/linuxmuster/dhcpd-update-samba-dns.py", "add", clip, host-decl-name);
-}
-on release {
-  set clip = binary-to-ascii(10, 8, ".", leased-address);
-  execute("/usr/lib/linuxmuster/dhcpd-update-samba-dns.py", "delete", clip, host-decl-name);
-}
-on expiry {
-  set clip = binary-to-ascii(10, 8, ".", leased-address);
-  execute("/usr/lib/linuxmuster/dhcpd-update-samba-dns.py", "delete", clip, host-decl-name);
+if known {
+  on commit {
+    set clip = binary-to-ascii(10, 8, ".", leased-address);
+    execute("/usr/lib/linuxmuster/dhcpd-update-samba-dns.py", "add", clip, host-decl-name);
+  }
+  on release {
+    set clip = binary-to-ascii(10, 8, ".", leased-address);
+    execute("/usr/lib/linuxmuster/dhcpd-update-samba-dns.py", "delete", clip, host-decl-name);
+  }
+  on expiry {
+    set clip = binary-to-ascii(10, 8, ".", leased-address);
+    execute("/usr/lib/linuxmuster/dhcpd-update-samba-dns.py", "delete", clip, host-decl-name);
+  }
 }
