--- a/share/templates/smb.conf
+++ b/share/templates/smb.conf
@@ -1,7 +1,7 @@
 # /etc/samba/smb.conf.setup
 #
 # thomas@linuxmuster.net
-# 20200416
+# 20200708
 #
 
 [global]
@@ -18,6 +18,9 @@ tls certfile = /etc/linuxmuster/ssl/@@servername@@.cert.pem
 tls cafile = /etc/linuxmuster/ssl/cacert.pem
 tls verify peer = ca_and_name
 ldap server require strong auth = no
+rpc_server:spoolss = external
+rpc_daemon:spoolssd = fork
+spoolss:architecture = Windows x64
 printing = cups
 printcap name = cups
 time server = yes
