fix #105: Remove slow name resolution in sudo env.

--- a/share/templates/smb.conf
+++ b/share/templates/smb.conf
@@ -1,7 +1,10 @@
 # /etc/samba/smb.conf.setup
 #
+# Don't edit this file!!!
+# Add your stuff in /etc/samba/smb.conf.admin.
+#
 # thomas@linuxmuster.net
-# 20200708
+# 20200720
 #
 
 [global]
@@ -24,8 +27,6 @@ spoolss:architecture = Windows x64
 printing = cups
 printcap name = cups
 time server = yes
-winbind nested groups = yes
-winbind expand groups = 6
 
 [netlogon]
 path = /var/lib/samba/sysvol/@@domainname@@/scripts
