fix #107: dns forwarder ip misses in smb.conf.

--- a/share/templates/smb.conf
+++ b/share/templates/smb.conf
@@ -4,7 +4,7 @@
 # Add your stuff in /etc/samba/smb.conf.admin.
 #
 # thomas@linuxmuster.net
-# 20200720
+# 20200722
 #
 
 [global]
@@ -12,7 +12,7 @@ workgroup = @@sambadomain@@
 realm = @@realm@@
 netbios name = @@netbiosname@@
 server role = active directory domain controller
-dns forwarder =
+dns forwarder = @@firewallip@@
 registry shares = yes
 host msdfs = yes
 tls enabled = yes
