added "ntlm auth = mschapv2-and-ntlmv2-only" needed for wpa2 enterprise to smb.conf.

--- a/share/templates/smb.conf
+++ b/share/templates/smb.conf
@@ -4,7 +4,7 @@
 # Add your stuff in /etc/samba/smb.conf.admin.
 #
 # thomas@linuxmuster.net
-# 20200722
+# 20200730
 #
 
 [global]
@@ -13,6 +13,7 @@ realm = @@realm@@
 netbios name = @@netbiosname@@
 server role = active directory domain controller
 dns forwarder = @@firewallip@@
+ntlm auth = mschapv2-and-ntlmv2-only
 registry shares = yes
 host msdfs = yes
 tls enabled = yes
