--- a/share/templates/smb.conf
+++ b/share/templates/smb.conf
@@ -4,7 +4,7 @@
 # Add your stuff in /etc/samba/smb.conf.admin.
 #
 # thomas@linuxmuster.net
-# 20200730
+# 20200816
 #
 
 [global]
@@ -28,6 +28,7 @@ spoolss:architecture = Windows x64
 printing = cups
 printcap name = cups
 time server = yes
+ntp signd socket directory = /var/lib/ntp/ntp.drift
 
 [netlogon]
 path = /var/lib/samba/sysvol/@@domainname@@/scripts
