fixed "ntp signd socket directory" in smb.conf (#110).

--- a/share/templates/smb.conf
+++ b/share/templates/smb.conf
@@ -4,7 +4,7 @@
 # Add your stuff in /etc/samba/smb.conf.admin.
 #
 # thomas@linuxmuster.net
-# 20200816
+# 20200817
 #
 
 [global]
@@ -28,7 +28,7 @@ spoolss:architecture = Windows x64
 printing = cups
 printcap name = cups
 time server = yes
-ntp signd socket directory = /var/lib/ntp/ntp.drift
+ntp signd socket directory = /var/lib/ntp
 
 [netlogon]
 path = /var/lib/samba/sysvol/@@domainname@@/scripts
