fix #110 (finally): linuxmuster setup prevents NT5DS from working.

--- a/share/templates/ntp.conf
+++ b/share/templates/ntp.conf
@@ -1,7 +1,7 @@
 # /etc/ntp.conf
 #
 # thomas@linuxmuster.net
-# 20191204
+# 20200817
 #
 # configuration for ntpd; see ntp.conf(5) for help
 
@@ -34,8 +34,8 @@ pool pool.ntp.org
 # up blocking replies from your own upstream servers.
 
 # By default, exchange time with everybody, but don't allow configuration.
-restrict -4 default kod notrap nomodify nopeer noquery limited
-restrict -6 default kod notrap nomodify nopeer noquery limited
+restrict -4 default kod notrap nomodify nopeer noquery limited mssntp
+restrict -6 default kod notrap nomodify nopeer noquery limited mssntp
 
 # Local users may interrogate the ntp server more closely.
 restrict 127.0.0.1
@@ -48,6 +48,8 @@ restrict source notrap nomodify noquery
 # cryptographically authenticated.
 #restrict 192.168.123.0 mask 255.255.255.0 notrust
 
+# for windows clients
+ntpsigndsocket /var/lib/samba/ntp_signd
 
 # If you want to provide time to your local subnet, change the next line.
 # (Again, the address is an example only.)
