* final fix #110 (Lac de Narlay version): changed ntp signd socket directory to "/run/samba/ntp_signd". * added includefile "/etc/ntp.conf.admin" to "/etc/ntp.conf" for custom settings. * added "/etc/ntp.conf.dist" to document default ntp settings.

--- a/share/templates/smb.conf
+++ b/share/templates/smb.conf
@@ -4,7 +4,7 @@
 # Add your stuff in /etc/samba/smb.conf.admin.
 #
 # thomas@linuxmuster.net
-# 20200722
+# 20200818
 #
 
 [global]
@@ -27,6 +27,7 @@ spoolss:architecture = Windows x64
 printing = cups
 printcap name = cups
 time server = yes
+ntp signd socket directory = /run/samba/ntp_signd
 
 [netlogon]
 path = /var/lib/samba/sysvol/@@domainname@@/scripts
