- removed smb.conf and ntp.conf update from postinst. - readded "ntlm auth = mschapv2-and-ntlmv2-only" needed for wpa2 enterprise to smb.conf template. - removed useless templates ntp.conf.admin and ntp.conf.dist.

--- a/share/templates/smb.conf
+++ b/share/templates/smb.conf
@@ -4,7 +4,7 @@
 # Add your stuff in /etc/samba/smb.conf.admin.
 #
 # thomas@linuxmuster.net
-# 20200818
+# 20200911
 #
 
 [global]
@@ -28,6 +28,7 @@ printing = cups
 printcap name = cups
 time server = yes
 ntp signd socket directory = /run/samba/ntp_signd
+ntlm auth = mschapv2-and-ntlmv2-only
 
 [netlogon]
 path = /var/lib/samba/sysvol/@@domainname@@/scripts
