--- a/share/templates/dhcpd.events.conf
+++ b/share/templates/dhcpd.events.conf
@@ -1,20 +1,20 @@
 # /etc/dhcp/events.conf
 #
 # thomas@linuxmuster.net
-# 20200418
+# 20220119
 #
 
-if known {
+if not static {
   on commit {
     set clip = binary-to-ascii(10, 8, ".", leased-address);
-    execute("/usr/lib/linuxmuster/dhcpd-update-samba-dns.py", "add", clip, host-decl-name);
+    execute("/usr/lib/linuxmuster/dhcpd-update-samba-dns.py", "add", clip, host-decl-name, "yes");
   }
   on release {
     set clip = binary-to-ascii(10, 8, ".", leased-address);
-    execute("/usr/lib/linuxmuster/dhcpd-update-samba-dns.py", "delete", clip, host-decl-name);
+    execute("/usr/lib/linuxmuster/dhcpd-update-samba-dns.py", "delete", clip, host-decl-name, "yes");
   }
   on expiry {
     set clip = binary-to-ascii(10, 8, ".", leased-address);
-    execute("/usr/lib/linuxmuster/dhcpd-update-samba-dns.py", "delete", clip, host-decl-name);
+    execute("/usr/lib/linuxmuster/dhcpd-update-samba-dns.py", "delete", clip, host-decl-name, "yes");
   }
 }
