--- a/share/templates/ntp.conf
+++ b/share/templates/ntp.conf
@@ -4,7 +4,7 @@
 # Add your stuff in /etc/ntp.conf.admin.
 #
 # thomas@linuxmuster.net
-# 20200911
+# 20220910
 #
 # configuration for ntpd; see ntp.conf(5) for help
 
@@ -19,4 +19,4 @@ restrict -6 default kod notrap nomodify nopeer noquery limited mssntp
 restrict 127.0.0.1
 restrict ::1
 restrict source notrap nomodify noquery
-ntpsigndsocket /run/samba/ntp_signd/
+ntpsigndsocket /var/lib/samba/ntp_signd/
