--- a/share/templates/smb.conf
+++ b/share/templates/smb.conf
@@ -4,7 +4,7 @@
 # Add your stuff in /etc/samba/smb.conf.admin.
 #
 # thomas@linuxmuster.net
-# 20200911
+# 20220910
 #
 
 [global]
@@ -27,7 +27,7 @@ spoolss:architecture = Windows x64
 printing = cups
 printcap name = cups
 time server = yes
-ntp signd socket directory = /run/samba/ntp_signd
+ntp signd socket directory = /var/lib/samba/ntp_signd
 ntlm auth = mschapv2-and-ntlmv2-only
 
 [netlogon]
