Fix #144: /run/samba/ntp_signd/ directory: wrong permissions prevent time synchronisation.

--- a/share/templates/ntp.conf
+++ b/share/templates/ntp.conf
@@ -19,4 +19,4 @@ restrict -6 default kod notrap nomodify nopeer noquery limited mssntp
 restrict 127.0.0.1
 restrict ::1
 restrict source notrap nomodify noquery
-ntpsigndsocket /var/lib/samba/ntp_signd/
+ntpsigndsocket @@ntpsockdir@@
