--- a/share/templates/smb.conf
+++ b/share/templates/smb.conf
@@ -27,7 +27,7 @@ spoolss:architecture = Windows x64
 printing = cups
 printcap name = cups
 time server = yes
-ntp signd socket directory = /var/lib/samba/ntp_signd
+ntp signd socket directory = @@ntpsockdir@@
 ntlm auth = mschapv2-and-ntlmv2-only
 
 [netlogon]
