ntpsec fix for ntp.conf.

--- a/share/templates/ntp.conf
+++ b/share/templates/ntp.conf
@@ -1,11 +1,11 @@
-# /etc/ntp.conf
+# /etc/ntpsec/ntp.conf
 #
 # thomas@linuxmuster.net
-# 20230919
+# 20250626
 #
 # configuration for ntpd; see ntp.conf(5) for help
 
-driftfile /var/lib/ntp/ntp.drift
+driftfile /var/lib/ntpsec/ntp.drift
 statistics loopstats peerstats clockstats
 filegen loopstats file loopstats type day enable
 filegen peerstats file peerstats type day enable
