--- a/debian/control
+++ b/debian/control
@@ -12,7 +12,7 @@ Pre-Depends: python3, linuxmuster-common
 Depends: coreutils, cups, printer-driver-cups-pdf, isc-dhcp-server, python3-bcrypt, python3-bs4,
   python3-lxml, python3-ipy, python3-apt, python3-netifaces, python3-dialog, python3-ldap3,
   python3-netaddr, python3-pip, python3-requests, openssl, ntp, ntpdate, samba, samba-dsdb-modules,
-  smbclient, ldb-tools, krb5-user, linuxmuster-linbo7, linuxmuster-webui7,
+  smbclient, ldb-tools, krb5-user, linuxmuster-linbo7, linuxmuster-webui7, ntpsec,
   sophomorix-samba, tmux
 Description: linuxmuster.net configuration scripts
  This package provides configuration scripts for linuxmuster.net
