--- a/share/templates/ntp.conf
+++ b/share/templates/ntp.conf
@@ -1,7 +1,7 @@
 # /etc/ntpsec/ntp.conf
 #
 # thomas@linuxmuster.net
-# 20250718
+# 20250721
 #
 # configuration for ntpd; see ntp.conf(5) for help
 
@@ -11,4 +11,10 @@ filegen loopstats file loopstats type day enable
 filegen peerstats file peerstats type day enable
 filegen clockstats file clockstats type day enable
 server @@firewallip@@ iburst prefer
+restrict -4 default kod notrap nomodify nopeer noquery limited mssntp
+restrict -6 default kod notrap nomodify nopeer noquery limited mssntp
+@@restricted_subnets@@
+restrict 127.0.0.1
+restrict ::1
+restrict source notrap nomodify noquery
 ntpsigndsocket @@ntpsockdir@@
