--- a/share/templates/firewall_cert_ext.cnf
+++ b/share/templates/firewall_cert_ext.cnf
@@ -1,10 +1,27 @@
 # /etc/linuxmuster/ssl/firewall_cert_ext.cnf
+#
+# thomas@linuxmuster.net
+# 20250910
+#
 
-subjectAltName = IP:@@firewallip@@, DNS:firewall.@@domainname@@, DNS:firewall
-basicConstraints = CA:FALSE
-nsCertType = server
-nsComment = "OpenSSL Generated Firewall Certificate"
-subjectKeyIdentifier = hash
-authorityKeyIdentifier = keyid,issuer:always
+[ req ]
+default_bits = 2048
+prompt = no
+default_md = sha256
+req_extensions = req_ext
+distinguished_name = dn
+
+[ dn ]
+CN = @@realm@@
+OU = @@sambadomain@@
+O = @@schoolname@@
+
+[ req_ext ]
+subjectAltName = @alt_names
 keyUsage = critical, digitalSignature, keyEncipherment
 extendedKeyUsage = serverAuth
+
+[ alt_names ]
+DNS.1 = firewall.@@domainname@@
+DNS.2 = firewall
+IP.1 = @@firewallip@@
