--- a/share/templates/server_cert_ext.cnf
+++ b/share/templates/server_cert_ext.cnf
@@ -1,10 +1,27 @@
 # /etc/linuxmuster/ssl/server_cert_ext.cnf
+#
+# thomas@linuxmuster.net
+# 20250910
+#
 
-subjectAltName = IP:@@serverip@@, DNS:@@servername@@.@@domainname@@, DNS:@@servername@@
-basicConstraints = CA:FALSE
-nsCertType = server
-nsComment = "OpenSSL Generated Server Certificate"
-subjectKeyIdentifier = hash
-authorityKeyIdentifier = keyid,issuer:always
+[ req ]
+default_bits = 2048
+prompt = no
+default_md = sha256
+req_extensions = req_ext
+distinguished_name = dn
+
+[ dn ]
+CN = @@realm@@
+OU = @@sambadomain@@
+O = @@schoolname@@
+
+[ req_ext ]
+subjectAltName = @alt_names
 keyUsage = critical, digitalSignature, keyEncipherment
 extendedKeyUsage = serverAuth
+
+[ alt_names ]
+DNS.1 = @@servername@@.@@domainname@@
+DNS.2 = @@servername@@
+IP.1 = @@serverip@@
