--- a/debian/control
+++ b/debian/control
@@ -2,17 +2,33 @@ Source: linuxmuster-base7
 Section: linuxmuster
 Priority: optional
 Maintainer: Thomas Schmitt <thomas@linuxmuster.net>
-Build-Depends: debhelper (>= 5.0.0)
+Build-Depends: debhelper (>= 10),
+ dh-python,
+ python3-all,
+ python3-setuptools,
+ python3-bcrypt,
+ python3-bs4,
+ python3-lxml,
+ python3-ipy,
+ python3-apt,
+ python3-netifaces,
+ python3-dialog,
+ python3-ldap3,
+ python3-netaddr,
+ python3-requests
 Standards-Version: 5.0.0
 
 Package: linuxmuster-base7
 Architecture: all
 Conflicts: dnsmasq-base
 Pre-Depends: python3, linuxmuster-common
-Depends: coreutils, cups, printer-driver-cups-pdf, isc-dhcp-server, python3-bcrypt, python3-bs4,
-  python3-lxml, python3-ipy, python3-apt, python3-netifaces, python3-dialog, python3-ldap3,
-  python3-netaddr, python3-pip, python3-requests, openssl, ntp, ntpdate, samba, samba-dsdb-modules,
-  smbclient, ldb-tools, krb5-user, linuxmuster-linbo7, linuxmuster-webui7, ntpsec,
+Depends: ${python3:Depends}, ${misc:Depends},
+  coreutils, cups, printer-driver-cups-pdf, isc-dhcp-server,
+  python3-bcrypt, python3-bs4, python3-lxml, python3-ipy, python3-apt,
+  python3-netifaces, python3-dialog, python3-ldap3, python3-netaddr,
+  python3-paramiko, python3-requests,
+  openssl, ntp, ntpdate, samba, samba-dsdb-modules, smbclient, ldb-tools,
+  krb5-user, linuxmuster-linbo7, linuxmuster-webui7, ntpsec,
   sophomorix-samba, tmux
 Description: linuxmuster.net configuration scripts
  This package provides configuration scripts for linuxmuster.net
