--- a/debian/control
+++ b/debian/control
@@ -6,6 +6,7 @@ Build-Depends: debhelper (>= 10),
  dh-python,
  python3-all,
  python3-setuptools,
+ linuxmuster-common,
  python3-bcrypt,
  python3-bs4,
  python3-lxml,
