--- a/debian/control
+++ b/debian/control
@@ -18,7 +18,8 @@ Build-Depends: debhelper (>= 10),
  python3-ldap3,
  python3-netaddr,
  python3-paramiko,
- python3-requests
+ python3-requests,
+ python3-urllib3
 Standards-Version: 5.0.0
 
 Package: linuxmuster-base7
@@ -29,7 +30,7 @@ Depends: ${python3:Depends}, ${misc:Depends},
   coreutils, cups, printer-driver-cups-pdf, isc-dhcp-server,
   python3-bcrypt, python3-bs4, python3-lxml, python3-ipy, python3-apt,
   python3-netifaces, python3-dialog, python3-ldap3, python3-netaddr,
-  python3-paramiko, python3-requests,
+  python3-paramiko, python3-requests, python3-urllib3,
   openssl, ntp, ntpdate, samba, samba-dsdb-modules, smbclient, ldb-tools,
   krb5-user, linuxmuster-linbo7, linuxmuster-webui7, ntpsec,
   sophomorix-samba, tmux
